2007-06-14  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (setup_dialog): fix GConf
	notification

2007-05-02  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (main): add g_thread_init as
	required by glib

2007-05-02  Bastien Nocera  <hadess@hadess.net>

	* gnome-keybindings.pc.in: Fix keysdir substitution, as
	reported by Christian Persch <chpe@svn.gnome.org>
	(Closes: #434591)

2007-04-30  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: upd
	* gnome-keybindings.pc.in: add a noarch pkgconfig file to allow
	applications to know where to add their keybindings
	(Closes: #434591)

2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* keybinding.desktop.in.in: renamed Bugzilla product.

2007-04-05  Bastien Nocera  <hadess@hadess.net>

	* 50-metacity-desktop-key.xml.in:
	* 50-metacity-key.xml.in:
	* Makefile.am: Remove the metacity keybindings definitions, they're
	in metacity now

2007-03-21  Bastien Nocera  <hadess@hadess.net>

	* gnome-keybinding-properties.c: (reload_key_entries):
	Prepend the directory name before loading the files, otherwise, we're
	loading them from the current directory, spotted by Fernando Herrera
	<fherrera@onirica.com> (Closes: #420796)

2007-03-19  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* gnome-keybinding-properties.c: (reload_key_entries):
	Fix the path from which we'd load the keybindings

2007-02-19  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (clear_old_model): clear GConf client
	cache before reloading since cached values don't pass the schema name
	along which can make entries vanish from the list (fixes bug 394776)

2007-02-08  Mariano Su?rez-Alvarez  <mariano@gnome.org>

	* gnome-keybinding-properties.c (metacity_key_list): added 
	gconf:/apps/metacity/global_keybindings/cycle_group

2007-02-07  Mariano Su?rez-Alvarez  <mariano@gnome.org>

	* gnome-keybinding-properties.c (clear_old_model, reload_key_entries,