@@ -1,3 +1,11 @@
+2007-08-05  Bastien Nocera  <hadess@hadess.net>
+
+	reviewed by: Jens Granseuer <jensgr@gmx.net>
+
+	* gnome-keybinding-properties.c: (keyval_is_forbidden),
+	(accel_edited_callback): Make the arrows and tabs unbindable
+	without a modifier (Closes: #463433)
+
 2007-06-14  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-keybinding-properties.c: (setup_dialog): fix GConf
